chore: add e2e tests for atomization

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,5 +17,17 @@
     "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0"
+  },
+  "nx": {
+    "targets": {
+      "serve-static": {
+        "executor": "@nx/web:file-server",
+        "options": {
+          "buildTarget": "build",
+          "staticFilePath": "apps/web/build",
+          "spa": true
+        }
+      }
+    }
   }
 }
