--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,17 @@ jobs:
 
       # Set the base and head SHAs for Nx Cloud
       - uses: nrwl/nx-set-shas@v4
+
+      - name: Clean up X server and Xvfb processes
+        run: |
+          # Clean up any existing X server locks
+          sudo rm -f /tmp/.X*-lock /tmp/.X11-unix/X*
+
+          # Kill any existing Xvfb processes
+          sudo pkill Xvfb || true
+
+          # Wait a moment for cleanup
+          sleep 2
       
       - run: npx nx start-ci-run --distribute-on="5 linux-medium-js" --stop-agents-after="e2e-ci"
 
