--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,16 @@ jobs:
 
       # Set the base and head SHAs for Nx Cloud
       - uses: nrwl/nx-set-shas@v4
-      
-      - run: xvfb-run -a -s "-screen 0 1280x1024x24" npx nx start-ci-run --distribute-on="3 linux-medium-js" --stop-agents-after="e2e-ci"
+      # Set up environment variables for Cypress and Xvfb
+      - run: |
+          echo "DISPLAY=:99" >> $NX_CLOUD_ENV
+          echo "ELECTRON_DISABLE_SANDBOX=1" >> $NX_CLOUD_ENV
+          echo "CYPRESS_CACHE_FOLDER=/tmp/.cypress" >> $NX_CLOUD_ENV
+
+      # Start Xvfb for running Cypress tests
+      - run: |
+          Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+      - run: npx nx start-ci-run --distribute-on="3 linux-medium-js" --stop-agents-after="e2e-ci"
 
       # Cache node_modules
       - uses: actions/setup-node@v4
